Se arregan code smells